[설정] 확장 기본 설정 추가
`package.json`

--- a/package.json
+++ b/package.json
@@ -7,8 +7,170 @@
     "vscode": "^1.103.0"
   },
   "categories": [
+    "AI",
+    "Azure",
+    "Chat",
+    "Data Science",
+    "Debuggers",
+    "Education",
+    "Extension Packs",
+    "Formatters",
+    "Keymaps",
+    "Language Packs",
+    "Linters",
+    "Machine Learning",
+    "Notebooks",
+    "Programming Languages",
+    "SCM Providers",
+    "Snippets",
+    "Testing",
+    "Visualization",
     "Other"
   ],
+  "keywords": [
+    "agent",
+    "ai",
+    "amazon",
+    "analysis",
+    "anthropic",
+    "assist",
+    "assistant",
+    "augment",
+    "autocomplete",
+    "autonomous",
+    "aws",
+    "bash",
+    "blackbox",
+    "bot",
+    "c",
+    "c#",
+    "c++",
+    "chat",
+    "chatbot",
+    "chatgpt",
+    "chatreplay",
+    "chop",
+    "claude",
+    "cli",
+    "cline",
+    "code",
+    "codegen",
+    "codegpt",
+    "codeium",
+    "codestral",
+    "codewhisperer",
+    "codex",
+    "codey",
+    "coding",
+    "cody",
+    "companion",
+    "completion",
+    "copilot",
+    "cpp",
+    "csharp",
+    "css",
+    "debuggers",
+    "deepseek",
+    "dev",
+    "developer",
+    "development",
+    "diff",
+    "documentation",
+    "domination",
+    "duet",
+    "editable",
+    "explanation",
+    "extension",
+    "figma",
+    "flutter",
+    "gcp",
+    "gemini",
+    "generate",
+    "generation",
+    "github",
+    "go",
+    "golang",
+    "google",
+    "gpt",
+    "haskell",
+    "html",
+    "ide",
+    "ignore",
+    "integration",
+    "intellicode",
+    "intellisense",
+    "java",
+    "javascript",
+    "json",
+    "jsonc",
+    "julia",
+    "jupyter",
+    "keybindings",
+    "kilo",
+    "kite",
+    "kotlin",
+    "language",
+    "launcher",
+    "llama",
+    "llm",
+    "log",
+    "lua",
+    "m",
+    "markdown",
+    "mcp",
+    "method",
+    "mistral",
+    "model",
+    "native",
+    "next",
+    "node",
+    "nodejs",
+    "nuxt",
+    "objectivec",
+    "ocaml",
+    "ollama",
+    "openai",
+    "openrouter",
+    "pair",
+    "participant",
+    "perl",
+    "php",
+    "pilot",
+    "productivity",
+    "programmer",
+    "programming",
+    "prompt",
+    "python",
+    "q",
+    "qodo",
+    "react",
+    "recommendation",
+    "refactor",
+    "referencing",
+    "roo",
+    "roocode",
+    "ruby",
+    "rust",
+    "snippets",
+    "sonnet",
+    "sourcegraph",
+    "summary",
+    "swift",
+    "tabnine",
+    "test",
+    "tools",
+    "trae",
+    "transform",
+    "typescript",
+    "vibe",
+    "vscode",
+    "vue",
+    "windsurf"
+  ],
+  "extensionDependencies": [],
+  "extensionPack": [],
+  "pricing": "Free",
+  "publisher": "acebunny00",
   "activationEvents": [
     "onStartupFinished"
   ],
