[설정] Gemini CLI 확장 요구사항 추가
`LICENSE`: 제미나이 라이센스 복사
`package.json`: 설정 추가
`README.md`: 템플릿 텍스트 제거 및 설명

https://github.com/google-gemini/gemini-cli/blob/main/LICENSE

--- a/package.json
+++ b/package.json
@@ -171,6 +171,16 @@
   "extensionPack": [],
   "pricing": "Free",
   "publisher": "acebunny00",
+  "icon": "gemini.png",
+  "homepage": "https://github.com/acebunny00",
+  "bugs": {
+    "url": "https://github.com/acebunny00/gemini-cli-launcher/issues",
+    "email": "acebunny00@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/acebunny00/gemini-cli-launcher"
+  },
   "activationEvents": [
     "onStartupFinished"
   ],
