--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gemini-cli-launcher",
   "displayName": "Gemini CLI Launcher",
   "description": "Gemini CLI를 편하게 사용할 수 있습니다.",
-  "version": "0.0.1",
+  "version": "0.0.8",
   "engines": {
     "vscode": "^1.103.0"
   },
@@ -185,7 +185,30 @@
     "onStartupFinished"
   ],
   "main": "./out/extension.js",
-  "contributes": {},
+  "contributes": {
+    "commands": [
+      {
+        "command": "gemini.cli.inPowerShell",
+        "title": "Gemini PowerShell로 열기"
+      },
+      {
+        "command": "gemini.cli.inGitBash",
+        "title": "Gemini GitBash로 열기"
+      }
+    ],
+    "menus": {
+      "explorer/context": [
+        {
+          "command": "gemini.cli.inPowerShell",
+          "group": "navigation"
+        },
+        {
+          "command": "gemini.cli.inGitBash",
+          "group": "navigation"
+        }
+      ]
+    }
+  },
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
