--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gemini-cli-launcher",
   "displayName": "Gemini CLI Launcher",
   "description": "Gemini CLI를 편하게 사용할 수 있습니다.",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "engines": {
     "vscode": "^1.103.0"
   },
@@ -188,33 +188,32 @@
   "contributes": {
     "commands": [
       {
-        "command": "gemini.cli.onGitBash",
-        "title": "Gemini CLI: Bash로 열기 - 리눅스 스타일"
-      },
-      {
-        "command": "gemini.cli.onBash",
-        "title": "Gemini CLI: Bash로 열기"
-      },
-      {
-        "command": "gemini.cli.onCMD",
-        "title": "Gemini CLI: CMD로 열기"
+        "command": "gemini.cli",
+        "title": "Gemini CLI: 내부 터미널에서 열기"
       },
       {
         "command": "gemini.cli.onPowerShell",
-        "title": "Gemini CLI: PowerShell로 열기"
+        "title": "Gemini CLI: 외부 PowerShell로 열기"
+      },
+      {
+        "command": "gemini.cli.onCMD",
+        "title": "Gemini CLI: 외부 CMD로 열기"
+      },
+      {
+        "command": "gemini.cli.onBash",
+        "title": "Gemini CLI: 외부 Bash로 열기"
+      },
+      {
+        "command": "gemini.cli.onGitBash",
+        "title": "Gemini CLI: 외부 Bash로 열기 - 리눅스 스타일"
       }
     ],
     "menus": {
       "explorer/context": [
         {
-          "command": "gemini.cli.onGitBash",
+          "command": "gemini.cli.onPowerShell",
           "group": "navigation",
-          "when": "config.gemini.cli.contextMenu.onGitBash"
-        },
-        {
-          "command": "gemini.cli.onBash",
-          "group": "navigation",
-          "when": "config.gemini.cli.contextMenu.onBash"
+          "when": "config.gemini.cli.contextMenu.onPowerShell"
         },
         {
           "command": "gemini.cli.onCMD",
@@ -222,9 +221,14 @@
           "when": "config.gemini.cli.contextMenu.onCMD"
         },
         {
-          "command": "gemini.cli.onPowerShell",
+          "command": "gemini.cli.onBash",
           "group": "navigation",
-          "when": "config.gemini.cli.contextMenu.onPowerShell"
+          "when": "config.gemini.cli.contextMenu.onBash"
+        },
+        {
+          "command": "gemini.cli.onGitBash",
+          "group": "navigation",
+          "when": "config.gemini.cli.contextMenu.onGitBash"
         }
       ]
     },
@@ -233,7 +237,7 @@
       "properties": {
         "gemini.cli.command.useFlash": {
           "type": "boolean",
-          "default": true,
+          "default": false,
           "description": "Pro or Flash (모델별 사용 제한량 존재)"
         },
         "gemini.cli.command.yolo": {
@@ -248,7 +252,7 @@
         },
         "gemini.cli.command.checkpointing": {
           "type": "boolean",
-          "default": true,
+          "default": false,
           "description": "프로젝트별 과거 요청사항 복구(Arrow up key)"
         },
         "gemini.cli.contextMenu.onGitBash": {
